Aded Mono.Data.Sqlite.dll to project file.

--- a/StepServer.csproj
+++ b/StepServer.csproj
@@ -120,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <Content Include="Mono.Data.Sqlite.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
