--- a/StepServer.csproj
+++ b/StepServer.csproj
@@ -74,6 +74,10 @@
       <HintPath>..\..\..\Libs\Mono.Data.Sqlite.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.6.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -90,6 +94,7 @@
     <Compile Include="NSGrades.cs" />
     <Compile Include="NSNotes.cs" />
     <Compile Include="Scripting.cs" />
+    <Compile Include="MySql.cs" />
     <Compile Include="SQLite.cs" />
     <Compile Include="User.cs" />
     <Compile Include="NSCommand.cs" />
@@ -120,7 +125,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
-    <Content Include="Mono.Data.Sqlite.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
