Changed server to use MySQL as a backend instead of Sqlite

--- a/Config.ini
+++ b/Config.ini
@@ -10,12 +10,10 @@ Server_ReadTimeout = 250
 Server_LogFile = Server.log
 Server_HigherPriority = True
 
-Database_File = Database.db
-Database_Name = main
-Database_Version = 3
-Database_Compressed = True
-Database_UseCommit = False
-Database_CommitTime = 30
+MySql_Host = hostname
+MySql_User = user
+MySql_Password = password
+MySql_Database = database
 
 Allow_Registration = True
 Allow_Spectators = True
