--- a/StepServer.csproj
+++ b/StepServer.csproj
@@ -74,6 +74,10 @@
       <HintPath>..\..\..\Libs\Mono.Data.Sqlite.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.6.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -84,6 +88,7 @@
     <Compile Include="Ez.cs" />
     <Compile Include="Func.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="MySql.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="NSAttacks.cs" />
     <Compile Include="NSDifficulty.cs" />
